<resources>
    <string name="app_name">Sorting</string>
    <string name="Generate">Generate</string>
    <string name="Sort">Sort</string>
    <string name="bubble_sort">Bubble Sort</string>
    <string name="el_array_va_aqui">El array va aqui</string>
    <string name="skip">Skip</string>
    <string name="please_press_generate_to_show_an_array_in_display">Please press Generate to show an array in display</string>
    <string name="asd">asd</string>
</resources>
